--- a/assets/css/modules/_border.scss
+++ b/assets/css/modules/_border.scss
@@ -77,4 +77,11 @@
     left: $mainPadding - 4;
     border: 4px solid white;
   }
+  @media (max-width: 767px) {
+    .line,
+    .circle,
+    .inner {
+      display: none;
+    }
+  }
 }
