--- a/assets/css/modules/_header.scss
+++ b/assets/css/modules/_header.scss
@@ -1,7 +1,8 @@
 .header {
   position: relative;
-  margin: 2em auto 0;
+  margin: 0 auto;
   width: 15em;
+  padding: 2em;
   z-index: 10;
   text-align: center;
   h1 {
@@ -81,22 +82,7 @@
       }
     }
   }
-}
-
-.negative .header {
-  h1 {
-    color: $color;
-    border-bottom-color: darken($background,0);
-  }
-  h2 {
-    a, span {
-      color: darken($background,0);
-    }
-    a:focus, a:hover, a.active {
-      text-shadow: 2px 0 0 #e2e7e9, -2px 0 0 #e2e7e9, 1px 0 0 #e2e7e9, -1px 0 0 #e2e7e9;
-      &::after {
-        border-bottom-color: darken($background,0);
-      }
-    }
+  @media (max-width: 767px) {
+    padding: 1em;
   }
 }
