--- a/assets/css/sites/_kontakt.scss
+++ b/assets/css/sites/_kontakt.scss
@@ -98,8 +98,11 @@
   }
   &[hidden] {
     opacity: 0.1;
-    filter: blur(8px);
-    transform: scale(0.98);
+    transition-delay: $duration;
+    @media (min-width: 768px) {
+      filter: blur(8px);
+      transform: scale(0.99);
+    }
     .kontakt--square--container {
       transform: translate3d(-100px,0,0) rotate(45deg) scale(0.92);
       transition-delay: 0s;
@@ -109,6 +112,25 @@
       filter: blur(2px);
       transform: scale(0.99);
       transition-delay: 0s;
+    }
+  }
+  @media (max-width: 767px) {
+    top: 5em;
+    left: 75%;
+    width: 100vw;
+    max-height: calc(100vh - 5em);
+    padding: 0 0 68px;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+    &--card {
+      margin: 100px 0;
+    }
+    &--square--container {
+      top: 60px;
+    }
+    &--footer {
+      position: static;
+      padding: 10px;
     }
   }
 }
