--- a/assets/css/modules/_start--term.scss
+++ b/assets/css/modules/_start--term.scss
@@ -142,13 +142,14 @@
     }
   }
   .text {
+    display: block;
     width: 40vw;
     max-width: 350px;
     padding: 13px 15px;
     line-height: 1.3;
     opacity: 0;
     // filter: blur(2px);
-    transform: translateY(-22px) translateZ(0);
+    transform: translateY(-10px) translateZ(0);
     transition: $duration ease-in;
     hyphens: auto;
     &[hidden] {
@@ -206,17 +207,27 @@
   }
   @media (max-width: 767px) {
     position: static;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
+    transform: none !important;
     a {
       display: inline-block;
     }
     .text {
+      box-sizing: content-box;
       margin-right: 10px;
       width: auto;
+      overflow: hidden;
+      padding-top: 0;
+      padding-bottom: 0;
     }
     &.inactive {
       a {
         filter: none;
+      }
+    }
+    &.open {
+      .text {
+        padding: 13px 15px;
       }
     }
   }
