--- a/assets/css/sites/_start.scss
+++ b/assets/css/sites/_start.scss
@@ -22,17 +22,41 @@
     }
   }
   @media (max-width: 767px) {
-    top: 5em;
+    top: 4em;
     width: 100vw;
-    max-height: calc(100vh - 5em);
-    padding: 0 0 68px;
+    height: auto;
+    max-height: calc(100vh - 4em);
+    padding: 0;
     overflow: auto;
     -webkit-overflow-scrolling: touch;
     transition-delay: $duration;
     .container {
       position: static;
-      padding: 0 0 80px 1.9em;
+      padding: 1em 0 2em 36px;
     }
+    .seperator {
+      margin: 0 auto 2em;
+      width: 50%;
+      height: 20px;
+      display: flex;
+      flex-direction: row;
+      .circle {
+        margin: auto;
+        width: 11px;
+        height: 11px;
+        border-radius: 6px;
+        border: 1px solid white;
+      }
+      .line {
+        margin: auto;
+        width: 40%;
+        height: 1px;
+        background: white;
+      }
+    }
+  }
+  @media (width: 320px), (width: 375px), (width: 414px) {
+    max-height: calc(100vh - 4em - 64px);
   }
 }
 #start--drawing {
