--- a/assets/css/sites/_arbeitsweise.scss
+++ b/assets/css/sites/_arbeitsweise.scss
@@ -143,6 +143,9 @@
             max-width: 100%;
             height: 100%;
           }
+          figcaption {
+            display: none;
+          }
         }
       }
     }
@@ -155,11 +158,12 @@
     }
   }
   @media (max-width: 767px) {
-    top: 5em;
+    top: 4em;
     left: 50%;
     width: 100vw;
-    max-height: calc(100vh - 5em);
-    padding: 0 0 68px;
+    height: auto;
+    max-height: calc(100vh - 4em);
+    padding: 0.6em 0 0;
     overflow: auto;
     -webkit-overflow-scrolling: touch;
     transition-delay: $duration;
@@ -179,12 +183,36 @@
           display: block;
           figure {
             figcaption {
-              padding: 0.5em 10px 2em;
+              display: block;
+              padding: 0.5em 15px 2em;
               line-height: 1.3;
             }
           }
         }
       }
     }
+    .seperator {
+      margin: 0 auto 2em;
+      width: 50%;
+      height: 20px;
+      display: flex;
+      flex-direction: row;
+      .circle {
+        margin: auto;
+        width: 11px;
+        height: 11px;
+        border-radius: 6px;
+        border: 1px solid white;
+      }
+      .line {
+        margin: auto;
+        width: 40%;
+        height: 1px;
+        background: white;
+      }
+    }
+  }
+  @media (width: 320px), (width: 375px), (width: 414px) {
+    max-height: calc(100vh - 4em - 64px);
   }
 }
