--- a/assets/css/sites/_kontakt.scss
+++ b/assets/css/sites/_kontakt.scss
@@ -96,6 +96,9 @@
       perspective: 1000; // prevent flickering
     }
   }
+  .seperator {
+    display: none;
+  }
   &[hidden] {
     opacity: 0.1;
     transition-delay: $duration;
@@ -109,28 +112,55 @@
     }
     .kontakt--footer {
       opacity: 0;
-      filter: blur(2px);
       transform: scale(0.99);
       transition-delay: 0s;
+      @media (min-width: 768px) {
+        filter: blur(2px);
+      }
     }
   }
   @media (max-width: 767px) {
-    top: 5em;
+    top: 4em;
     left: 75%;
     width: 100vw;
-    max-height: calc(100vh - 5em);
-    padding: 0 0 68px;
+    height: auto;
+    max-height: calc(100vh - 4em);
+    padding: 0;
     overflow: auto;
     -webkit-overflow-scrolling: touch;
     &--card {
       margin: 100px 0;
     }
     &--square--container {
-      top: 60px;
+      top: calc(64px);
     }
     &--footer {
       position: static;
+      margin-bottom: 2em;
       padding: 10px;
     }
+    .seperator {
+      margin: 0 auto 2em;
+      width: 50%;
+      height: 20px;
+      display: flex;
+      flex-direction: row;
+      .circle {
+        margin: auto;
+        width: 11px;
+        height: 11px;
+        border-radius: 6px;
+        border: 1px solid white;
+      }
+      .line {
+        margin: auto;
+        width: 40%;
+        height: 1px;
+        background: white;
+      }
+    }
+  }
+  @media (width: 320px), (width: 375px), (width: 414px) {
+    max-height: calc(100vh - 4em - 64px);
   }
 }
