--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,7 +203,7 @@ body {
   @media (max-width: 767px) {
     body {
       padding: 0;
-      font-size: 16px;
+      font-size: 17px;
       min-height: 0; } }
 
 a {
@@ -473,11 +473,12 @@ a {
   width: 15em;
   padding: 2em;
   z-index: 10;
-  text-align: center; }
+  text-align: center;
+  line-height: 1em; }
   .header h1 {
     position: relative;
     overflow: hidden;
-    margin-bottom: 0.3em;
+    margin-bottom: 6px;
     padding: 0;
     display: inline-block;
     font-family: 'Source Sans Pro', sans-serif;
@@ -488,6 +489,10 @@ a {
     white-space: nowrap;
     -webkit-transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275), color 400ms cubic-bezier(0.645, 0.045, 0.355, 1), border-color 400ms cubic-bezier(0.645, 0.045, 0.355, 1);
     transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275), color 400ms cubic-bezier(0.645, 0.045, 0.355, 1), border-color 400ms cubic-bezier(0.645, 0.045, 0.355, 1); }
+    @media (max-width: 767px) {
+      .header h1 {
+        margin-bottom: 3px;
+        font-size: 1.4em; } }
     .header h1:focus, .header h1:hover {
       padding: 0 4px; }
     .header h1 a {
@@ -500,6 +505,9 @@ a {
     letter-spacing: 0.13em;
     font-size: 0.95em;
     color: #a1cad2; }
+    @media (max-width: 767px) {
+      .header h2 {
+        font-size: 0.85em; } }
   .header h2 span {
     -webkit-transition: color 400ms cubic-bezier(0.645, 0.045, 0.355, 1);
     transition: color 400ms cubic-bezier(0.645, 0.045, 0.355, 1); }
@@ -527,7 +535,8 @@ a {
         border-bottom-color: #a1cad2; }
   @media (max-width: 767px) {
     .header {
-      padding: 1em; } }
+      width: auto;
+      padding: 1em 1em 0.2em; } }
 
 .nav {
   position: absolute;
@@ -544,7 +553,7 @@ a {
     -webkit-transition: 200ms;
     transition: 200ms; }
     .nav .hamburger div {
-      margin-top: 2px;
+      margin: 2px auto;
       width: 12px;
       height: 2px;
       display: block;
@@ -582,13 +591,26 @@ a {
       display: -webkit-flex;
       display: -ms-flexbox;
       display: flex;
-      padding: 5em 0;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      padding: 5em 0 1em;
       pointer-events: none; }
       .nav .hamburger {
         position: absolute;
-        left: 17px;
-        top: 30px;
+        left: 3px;
+        top: 24px;
+        box-sizing: border-box;
+        width: 36px;
+        height: 36px;
+        padding-top: 9px;
         pointer-events: auto; }
+        .nav .hamburger div {
+          margin: 3px auto;
+          width: 13px;
+          height: 2px; }
         .nav .hamburger:focus div:nth-of-type(1), .nav .hamburger:hover div:nth-of-type(1) {
           -webkit-transform: translate(0, -0.5px);
               -ms-transform: translate(0, -0.5px);
@@ -597,8 +619,52 @@ a {
           -webkit-transform: translate(0, 0.5px);
               -ms-transform: translate(0, 0.5px);
                   transform: translate(0, 0.5px); }
+      .nav--seperator {
+        margin: auto;
+        width: 50%;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: row;
+            -ms-flex-direction: row;
+                flex-direction: row; }
+        .nav--seperator .circle {
+          margin: auto;
+          width: 11px;
+          height: 11px;
+          border-radius: 6px;
+          border: 1px solid white;
+          opacity: 0;
+          -webkit-transform: scale(0);
+              -ms-transform: scale(0);
+                  transform: scale(0);
+          -webkit-transition: 200ms;
+          transition: 200ms; }
+        .nav--seperator .line {
+          margin: auto;
+          width: 40%;
+          height: 1px;
+          background: white;
+          opacity: 0;
+          -webkit-transform: scaleX(0);
+              -ms-transform: scaleX(0);
+                  transform: scaleX(0);
+          -webkit-transition: 200ms;
+          transition: 200ms; }
+          .nav--seperator .line:first-child {
+            -webkit-transform-origin: right center;
+                -ms-transform-origin: right center;
+                    transform-origin: right center; }
+          .nav--seperator .line:last-child {
+            -webkit-transform-origin: left center;
+                -ms-transform-origin: left center;
+                    transform-origin: left center; }
       .nav ul {
         margin: auto;
+        width: 100%;
         font-size: 1.3em;
         opacity: 0;
         -webkit-transition: 200ms;
@@ -611,13 +677,27 @@ a {
       .nav.active {
         pointer-events: auto; }
         .nav.active .hamburger div:nth-of-type(1) {
-          -webkit-transform: translate(0, 2px) rotate(-45deg);
-              -ms-transform: translate(0, 2px) rotate(-45deg);
-                  transform: translate(0, 2px) rotate(-45deg); }
+          -webkit-transform: translate(0, 2.5px) rotate(-45deg);
+              -ms-transform: translate(0, 2.5px) rotate(-45deg);
+                  transform: translate(0, 2.5px) rotate(-45deg); }
         .nav.active .hamburger div:nth-of-type(2) {
-          -webkit-transform: translate(0, -2px) rotate(45deg);
-              -ms-transform: translate(0, -2px) rotate(45deg);
-                  transform: translate(0, -2px) rotate(45deg); }
+          -webkit-transform: translate(0, -2.5px) rotate(45deg);
+              -ms-transform: translate(0, -2.5px) rotate(45deg);
+                  transform: translate(0, -2.5px) rotate(45deg); }
+        .nav.active .nav--seperator .circle {
+          opacity: 1;
+          -webkit-transform: none;
+              -ms-transform: none;
+                  transform: none;
+          -webkit-transition-delay: 400ms;
+                  transition-delay: 400ms; }
+        .nav.active .nav--seperator .line {
+          opacity: 1;
+          -webkit-transform: none;
+              -ms-transform: none;
+                  transform: none;
+          -webkit-transition-delay: 600ms;
+                  transition-delay: 600ms; }
         .nav.active ul {
           opacity: 1;
           -webkit-transition-delay: 200ms;
@@ -750,13 +830,14 @@ a {
       -webkit-transition: 200ms;
       transition: 200ms; }
   .start--term .text {
+    display: block;
     width: 40vw;
     max-width: 350px;
     padding: 13px 15px;
     line-height: 1.3;
     opacity: 0;
-    -webkit-transform: translateY(-22px) translateZ(0);
-            transform: translateY(-22px) translateZ(0);
+    -webkit-transform: translateY(-10px) translateZ(0);
+            transform: translateY(-10px) translateZ(0);
     -webkit-transition: 200ms ease-in;
     transition: 200ms ease-in;
     -webkit-hyphens: auto;
@@ -810,15 +891,24 @@ a {
   @media (max-width: 767px) {
     .start--term {
       position: static;
-      margin-bottom: 5px; }
+      margin-bottom: 10px;
+      -webkit-transform: none !important;
+          -ms-transform: none !important;
+              transform: none !important; }
       .start--term a {
         display: inline-block; }
       .start--term .text {
+        box-sizing: content-box;
         margin-right: 10px;
-        width: auto; }
+        width: auto;
+        overflow: hidden;
+        padding-top: 0;
+        padding-bottom: 0; }
       .start--term.inactive a {
         -webkit-filter: none;
-                filter: none; } }
+                filter: none; }
+      .start--term.open .text {
+        padding: 13px 15px; } }
 
 .window {
   z-index: 5;
@@ -865,8 +955,6 @@ a {
             transition-timing-function: ease-in; }
     .window[hidden] .window--container {
       opacity: 0;
-      -webkit-filter: blur(2px);
-              filter: blur(2px);
       -webkit-transform: scale(0.95);
           -ms-transform: scale(0.95);
               transform: scale(0.95);
@@ -874,16 +962,25 @@ a {
               transition-delay: 0s;
       -webkit-transition-timing-function: ease-in;
               transition-timing-function: ease-in; }
+    @media (min-width: 768px) {
+      .window[hidden] .window--container {
+        -webkit-filter: blur(2px);
+                filter: blur(2px); } }
   @media (max-width: 767px) {
     .window {
-      padding-top: 5em; }
+      top: 5em; }
       .window--container {
         margin: 0;
         width: auto;
         max-height: calc(100vh - 5em);
         padding: 20px;
         overflow: auto;
-        overflow-scrolling: touch; } }
+        -webkit-overflow-scrolling: touch; }
+        .window--container blockquote {
+          width: auto; } }
+  @media (width: 320px), (width: 375px), (width: 414px) {
+    .window--container {
+      max-height: calc(100vh - 5em - 64px); } }
 
 .start {
   position: relative;
@@ -913,17 +1010,45 @@ a {
       top: 0%; }
   @media (max-width: 767px) {
     .start {
-      top: 5em;
+      top: 4em;
       width: 100vw;
-      max-height: calc(100vh - 5em);
-      padding: 0 0 68px;
+      height: auto;
+      max-height: calc(100vh - 4em);
+      padding: 0;
       overflow: auto;
       -webkit-overflow-scrolling: touch;
       -webkit-transition-delay: 200ms;
               transition-delay: 200ms; }
       .start .container {
         position: static;
-        padding: 0 0 80px 1.9em; } }
+        padding: 1em 0 2em 36px; }
+      .start .seperator {
+        margin: 0 auto 2em;
+        width: 50%;
+        height: 20px;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: row;
+            -ms-flex-direction: row;
+                flex-direction: row; }
+        .start .seperator .circle {
+          margin: auto;
+          width: 11px;
+          height: 11px;
+          border-radius: 6px;
+          border: 1px solid white; }
+        .start .seperator .line {
+          margin: auto;
+          width: 40%;
+          height: 1px;
+          background: white; } }
+  @media (width: 320px), (width: 375px), (width: 414px) {
+    .start {
+      max-height: calc(100vh - 4em - 64px); } }
 
 #start--drawing {
   z-index: -1;
@@ -997,11 +1122,12 @@ a {
                 transform: scale(0.99); } }
   @media (max-width: 767px) {
     .vita {
-      top: 5em;
+      top: 4em;
       left: 25%;
       width: 100vw;
-      max-height: calc(100vh - 5em);
-      padding: 0 0 68px;
+      height: auto;
+      max-height: calc(100vh - 4em);
+      padding: 0.6em 0 0;
       overflow: auto;
       -webkit-overflow-scrolling: touch;
       -webkit-transition-delay: 200ms;
@@ -1009,12 +1135,46 @@ a {
       .vita--image {
         float: none;
         width: auto;
-        margin: 0 0 20px; }
+        margin: 0 0 1em; }
       .vita--textbox {
         float: none;
-        margin: 5px;
+        margin-bottom: 2em;
         width: auto;
-        padding: 10px; } }
+        padding: 0 15px;
+        background: none;
+        -webkit-hyphens: auto;
+           -moz-hyphens: auto;
+            -ms-hyphens: auto;
+                hyphens: auto; }
+        .vita--textbox p {
+          margin-bottom: 0.5em; }
+      .vita .seperator {
+        margin: 0 auto 2em;
+        width: 50%;
+        height: 20px;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: row;
+            -ms-flex-direction: row;
+                flex-direction: row; }
+        .vita .seperator .circle {
+          margin: auto;
+          width: 11px;
+          height: 11px;
+          border-radius: 6px;
+          border: 1px solid white; }
+        .vita .seperator .line {
+          margin: auto;
+          width: 40%;
+          height: 1px;
+          background: white; } }
+  @media (width: 320px), (width: 375px), (width: 414px) {
+    .vita {
+      max-height: calc(100vh - 4em - 64px); } }
 
 .arbeitsweise {
   position: absolute;
@@ -1164,6 +1324,8 @@ a {
           width: 100%;
           max-width: 100%;
           height: 100%; }
+        .arbeitsweise--gallery--images--container figure figcaption {
+          display: none; }
   .arbeitsweise[hidden] {
     opacity: 0.1; }
     @media (min-width: 768px) {
@@ -1175,11 +1337,12 @@ a {
                 transform: scale(0.99); } }
   @media (max-width: 767px) {
     .arbeitsweise {
-      top: 5em;
+      top: 4em;
       left: 50%;
       width: 100vw;
-      max-height: calc(100vh - 5em);
-      padding: 0 0 68px;
+      height: auto;
+      max-height: calc(100vh - 4em);
+      padding: 0.6em 0 0;
       overflow: auto;
       -webkit-overflow-scrolling: touch;
       -webkit-transition-delay: 200ms;
@@ -1195,8 +1358,36 @@ a {
         .arbeitsweise--gallery--images--container {
           display: block; }
           .arbeitsweise--gallery--images--container figure figcaption {
-            padding: 0.5em 10px 2em;
-            line-height: 1.3; } }
+            display: block;
+            padding: 0.5em 15px 2em;
+            line-height: 1.3; }
+      .arbeitsweise .seperator {
+        margin: 0 auto 2em;
+        width: 50%;
+        height: 20px;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: row;
+            -ms-flex-direction: row;
+                flex-direction: row; }
+        .arbeitsweise .seperator .circle {
+          margin: auto;
+          width: 11px;
+          height: 11px;
+          border-radius: 6px;
+          border: 1px solid white; }
+        .arbeitsweise .seperator .line {
+          margin: auto;
+          width: 40%;
+          height: 1px;
+          background: white; } }
+  @media (width: 320px), (width: 375px), (width: 414px) {
+    .arbeitsweise {
+      max-height: calc(100vh - 4em - 64px); } }
 
 .kontakt {
   position: absolute;
@@ -1297,6 +1488,8 @@ a {
               backface-visibility: hidden;
       -webkit-perspective: 1000;
               perspective: 1000; }
+  .kontakt .seperator {
+    display: none; }
   .kontakt[hidden] {
     opacity: 0.1;
     -webkit-transition-delay: 200ms;
@@ -1315,26 +1508,57 @@ a {
               transition-delay: 0s; }
     .kontakt[hidden] .kontakt--footer {
       opacity: 0;
-      -webkit-filter: blur(2px);
-              filter: blur(2px);
       -webkit-transform: scale(0.99);
           -ms-transform: scale(0.99);
               transform: scale(0.99);
       -webkit-transition-delay: 0s;
               transition-delay: 0s; }
+      @media (min-width: 768px) {
+        .kontakt[hidden] .kontakt--footer {
+          -webkit-filter: blur(2px);
+                  filter: blur(2px); } }
   @media (max-width: 767px) {
     .kontakt {
-      top: 5em;
+      top: 4em;
       left: 75%;
       width: 100vw;
-      max-height: calc(100vh - 5em);
-      padding: 0 0 68px;
+      height: auto;
+      max-height: calc(100vh - 4em);
+      padding: 0;
       overflow: auto;
       -webkit-overflow-scrolling: touch; }
       .kontakt--card {
         margin: 100px 0; }
       .kontakt--square--container {
-        top: 60px; }
+        top: calc(64px); }
       .kontakt--footer {
         position: static;
-        padding: 10px; } }
+        margin-bottom: 2em;
+        padding: 10px; }
+      .kontakt .seperator {
+        margin: 0 auto 2em;
+        width: 50%;
+        height: 20px;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: row;
+            -ms-flex-direction: row;
+                flex-direction: row; }
+        .kontakt .seperator .circle {
+          margin: auto;
+          width: 11px;
+          height: 11px;
+          border-radius: 6px;
+          border: 1px solid white; }
+        .kontakt .seperator .line {
+          margin: auto;
+          width: 40%;
+          height: 1px;
+          background: white; } }
+  @media (width: 320px), (width: 375px), (width: 414px) {
+    .kontakt {
+      max-height: calc(100vh - 4em - 64px); } }
